kubernetes/08-easyshop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: easyshop-deployment
  namespace: easyshop-hack
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: easyshop 
  template: 
    metadata:
      labels:
        app: easyshop
    spec: 
      containers:
      - name: easyshop
        image: shaheen8954/easyshop-hack:14
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "256m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 25
          periodSeconds: 20
