kubernetes/13-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easyshop-redis
  namespace: easyshop-hack
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
