kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easyshop-ingress
  namespace: easyshop-hack
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "443"
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
   # alb.ingress.kubernetes.io/healthcheck-path: /api/health
   # alb.ingress.kubernetes.io/healthcheck-port: '3000'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
   # alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
   # alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
   # alb.ingress.kubernetes.io/healthcheck-threshold-count: '2'
   # alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:653847276979:certificate/f2865f3a-a702-4c7c-bd68-ca2ef6392e78
    alb.ingress.kubernetes.io/group.name: easyshop-app-lb 

spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:    
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: easyshop-service
            port:
              number: 80
